<resources>
    <string name="app_name">To Do App</string>
    <string name="abierto">Abierto</string>
    <string name="cerrado">Cerrado</string>

    <string name="vistaTitle">Vistas</string>
    <string name="allVista">Todos los pendientes</string>
    <string name="importantVista">Importantes</string>
    <string name="plannedVista">Planeados</string>
    <string name="completedVista">Completadas</string>

    <string name="listMenuTitle">Listas</string>
    <string name="pendingList">Pendientes</string>
    <string name="addList">Agregar lista</string>
    <string name="openDrawerDesc">Abrir menú</string>
    <string name="closeDrawerDesc">Cerrar menú</string>

    <string name="ordenateList">Ordenar lista</string>
    <string name="byImportance">Por importancia</string>
    <string name="byTime">Por fecha de vencimiento</string>
    <string name="ascending">Ascendente</string>
    <string name="descending">Descendente</string>

    <!--<string name=""
    <string name="filtrateImportanceDescending">Ordenar por importancia descendiente</string>
    <string name="filtrateImportanceAscending">Ordenar por importancia ascendente</string>
    <string name="filtrateTimeDescending">Ordenar por fecha de vencimiento descendiente</string>
    <string name="filtrateTimeAscending">Ordenar por fecha de vencimiento ascendiente</string>

    -->
    <string name="showCompleted">Mostrar completadas</string>
    <string name="dontShowCompleted">No mostrar completadas</string>

    <string name="editList">Editar lista</string>
    <string name="createList">Crear Lista</string>
    <string name="listTitle">Título de la lista</string>
    <string name="listIcon">Ícono de la lista</string>
    <string name="listBackgroudColor">Color de fondo de la lista</string>
    <string name="createTask">Crear tarea</string>

    <string name="taskTitle">Título</string>
    <string name="taskDescription">Notas</string>
    <string name="taskImportance">Nivel de importancia</string>
    <string name="taskDateLimit">Fecha de vencimiento</string>
    <string name="save">Guardar</string>
    <string name="cancel">Cancelar</string>
    <string name="eliminar">Eliminar</string>
    <string name="completedConfirmation">Se ha marcado la tarea como completada</string>

    <string name="saveDate">Guardar fecha</string>
    <string name="default_notification_channel_id">huh</string>

    <array name="importanceArrayOptions">
        <item>No asignada</item>
        <item>Baja</item>
        <item>Normal</item>
        <item>Alta</item>
    </array>

    <string name="editTask">Editar tarea</string>
    <string name="removeImportance">Quitar nivel de importancia</string>
    <string name="setTodayLimit">Cambiar fecha a vence hoy</string>
    <string name="setTomorrowLimit">Cambiar fecha a vence mañana</string>
    <string name="changeDate">Elegir fecha de vencimiento</string>
    <string name="removeDate">Quitar fecha de vencimiento</string>
    <string name="markCompleted">Marcar como completada</string>
    <string name="deleteTask">Eliminar tarea</string>

    <string name="fillingError">Por favor llene todos los campos</string>
    <string name="taskTitleError">Se necesita poner un título </string>


    <string name="login_title">¿Ya tienes una cuenta?</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="login_button">LOGIN</string>
    <string name="forgot_password">¿Olvidaste tu contraseña?</string>
    <string name="register_now">¿Nuevo usuario? Registrate</string>

    <string name="register_title">Create tu cuenta</string>
    <string name="name_hint">Name</string>
    <string name="confirm_password_hint">Confirm Password</string>
    <string name="register_button">REGISTRAR</string>
    <string name="already_have_account">Already have an account? Login</string>
    <string name="lastname_hint">Last Name</string>

    <string name="logout">Cerrar sesión</string>
    <string name="choose_avatar">Elegir avatar</string>
    <string name="login_subtitle">Inicia sesión</string>
    <string name="google_register">Registrate con Google</string>
    <string name="indications">Ó rellena el formulario</string>

    <string name="fill_all_fields">Por favor, completa todos los campos</string>
    <string name="passwords_do_not_match">Las contraseñas no coinciden</string>
    <string name="change_password">Cambiar contraseña</string>

    <string name="sharedLists">Listas compartidas</string>
    <string name="addSharedLists">Agregar listas compartidas</string>
    <string name="usersInThisList">Usuarios en esta lista</string>
    <string name="add">Agregar</string>
    <string name="resendInvitation">Reenviar Inv.</string>
    <string name="orderByUser">Por nombre de usuario</string>
</resources>