<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="24dp"
        android:gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_title"
            android:textSize="28sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_marginBottom="32dp" />

        <com.google.android.gms.common.SignInButton
            android:id="@+id/googleSignInButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"/>

        <EditText
            android:id="@+id/register_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name_hint"
            android:inputType="textPersonName"
            android:drawableStart="@android:drawable/ic_menu_edit"
            android:padding="14dp"
            android:textColor="@color/white"
            android:textColorHint="@color/hintText"
            android:background="@drawable/rounded_input"
            android:elevation="2dp"
            android:layout_marginBottom="16dp" />

        <EditText
            android:id="@+id/register_lastname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/lastname_hint"
            android:inputType="textPersonName"
            android:drawableStart="@android:drawable/ic_menu_edit"
            android:padding="14dp"
            android:textColor="@color/white"
            android:textColorHint="@color/hintText"
            android:background="@drawable/rounded_input"
            android:elevation="2dp"
            android:layout_marginBottom="16dp" />

        <EditText
            android:id="@+id/register_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            android:drawableStart="@android:drawable/ic_dialog_email"
            android:padding="14dp"
            android:textColor="@color/white"
            android:textColorHint="@color/hintText"
            android:background="@drawable/rounded_input"
            android:elevation="2dp"
            android:layout_marginBottom="16dp" />

        <EditText
            android:id="@+id/register_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:drawableStart="@android:drawable/ic_lock_idle_lock"
            android:padding="14dp"
            android:textColor="@color/white"
            android:textColorHint="@color/hintText"
            android:background="@drawable/rounded_input"
            android:elevation="2dp"
            android:layout_marginBottom="16dp" />

        <EditText
            android:id="@+id/register_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirm_password_hint"
            android:inputType="textPassword"
            android:drawableStart="@android:drawable/ic_lock_idle_lock"
            android:padding="14dp"
            android:textColor="@color/white"
            android:textColorHint="@color/hintText"
            android:background="@drawable/rounded_input"
            android:elevation="2dp"
            android:layout_marginBottom="24dp" />

        <TextView
            android:id="@+id/avatarText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose_avatar"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:layout_gravity="center"
            android:layout_marginBottom="8dp"/>

        <ImageView
            android:id="@+id/avatarImage"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_launcher_foreground"
            android:scaleType="centerCrop"
            android:background="@drawable/circle_background"
            android:layout_marginBottom="24dp" />

        <Button
            android:id="@+id/button_register"
            android:layout_width="224dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:background="@drawable/rounded_button"
            android:elevation="3dp"
            android:text="@string/register_button"
            android:textColor="@color/white"
            android:textStyle="bold" />
    </LinearLayout>
</ScrollView>