<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@color/mainColor">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@drawable/background_custom" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="32dp"
            android:gravity="center_horizontal">

            <Space
                android:layout_width="match_parent"
                android:layout_height="24dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forgot_password"
                android:textColor="@color/white"
                android:textSize="29sp"
                android:textStyle="bold"
                android:layout_marginBottom="32dp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="70dp" />

            <EditText
                android:id="@+id/email_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_hint"
                android:inputType="textEmailAddress"
                android:drawableStart="@drawable/correo"
                android:drawablePadding="12dp"
                android:padding="14dp"
                android:textColor="#003366"
                android:textColorHint="@color/silver"
                android:background="@drawable/rounded_input"
                android:layout_marginBottom="16dp" />

            <EditText
                android:id="@+id/name_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name_hint"
                android:drawableStart="@drawable/name"
                android:drawablePadding="12dp"
                android:padding="14dp"
                android:textColor="#003366"
                android:textColorHint="@color/silver"
                android:background="@drawable/rounded_input"
                android:layout_marginBottom="16dp" />

            <EditText
                android:id="@+id/lastname_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/lastname_hint"
                android:drawableStart="@drawable/lastname"
                android:drawablePadding="12dp"
                android:padding="14dp"
                android:textColor="#003366"
                android:textColorHint="@color/silver"
                android:background="@drawable/rounded_input"
                android:layout_marginBottom="16dp" />

            <EditText
                android:id="@+id/new_password_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password_hint"
                android:inputType="textPassword"
                android:drawableStart="@drawable/password"
                android:drawablePadding="12dp"
                android:padding="14dp"
                android:textColor="#003366"
                android:textColorHint="@color/silver"
                android:background="@drawable/rounded_input"
                android:layout_marginBottom="16dp" />

            <EditText
                android:id="@+id/confirm_password_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/confirm_password_hint"
                android:inputType="textPassword"
                android:drawableStart="@drawable/password"
                android:drawablePadding="12dp"
                android:padding="14dp"
                android:textColor="#003366"
                android:textColorHint="@color/silver"
                android:background="@drawable/rounded_input"
                android:layout_marginBottom="24dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/reset_password_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="32dp"
                android:backgroundTint="@color/buttonBlue2"
                android:text="@string/change_password"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                app:cornerRadius="30dp" />
        </LinearLayout>
    </FrameLayout>
</ScrollView>