<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/mainColor"
            android:text="@string/createTask"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textAlignment="center"
            android:padding="10dp"
            android:id="@+id/taskWindowTitle"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:orientation="vertical"
            android:padding="8dp"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginBottom="10dp"
                >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/taskTitle"
                    android:text="@string/taskTitle"
                    android:textSize="12sp"/>
                <EditText
                    android:id="@+id/titleInput"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textCapSentences"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginBottom="10dp"
                >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/taskDescription"
                    android:text="@string/taskDescription"
                    android:textSize="12sp"/>
                <EditText
                    android:id="@+id/notesInput"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textMultiLine"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginBottom="10dp"
                >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/taskImportance"
                    android:text="@string/taskImportance"
                    android:textSize="12sp"/>
                <Spinner
                    android:id="@+id/importanceSpinner"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/taskNotes"
                    android:text="@string/taskDateLimit"
                    android:textSize="12sp"/>
                <EditText
                    android:id="@+id/dateSelector"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="date"
                    android:focusable="false"
                    android:clickable="true"/>
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</ScrollView>
