<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/mainColor"
        android:text="@string/createList"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textAlignment="center"
        android:padding="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/listIcon"
                android:text="@string/listIcon"
                android:textSize="12sp"/>
            <ImageButton
                android:id="@+id/iconChangerButton"
                android:layout_width="160dp"
                android:layout_height="160dp"
                android:contentDescription="@string/listIcon"
                android:scaleType="fitXY"
                android:backgroundTint="@color/mercury"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp"
            android:baselineAligned="false">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginBottom="10dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/listTitle"
                    android:text="@string/listTitle"
                    android:textSize="12sp"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:labelFor="@id/listTitle"
                    android:inputType="textCapSentences"
                    android:id="@+id/titleInput"
                    />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/listColor"
                    android:text="@string/listBackgroudColor"
                    android:textSize="12sp"/>
                <Spinner
                    android:id="@+id/colorSpinner"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:spinnerMode="dialog"
                    android:textAlignment="center"
                    android:background="@drawable/color_blob"
                    android:gravity="center"

                    />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>




</LinearLayout>